# MyFind-VerteilteSysteme

./: .gitignore  CMakeLists.txt
src/: Options.cpp  Options.h  SearchResult.cpp  SearchResult.h  main  main.cpp  myfind
